--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,8 @@
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/markerwithlabel.js"></script>
+    <script src="js/translation.js"></script>
+    <script src="js/angular-translate.min.js"></script>
 </head>
 <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
