--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,18 @@
     <script src="cordova.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/markerwithlabel.js"></script>
+    <!--<script src="js/controllers.js"></script>-->
+    <script src="js/common/services.js"></script>
+    <script src="js/common/directives.js"></script>
+    <script src="js/common/markerwithlabel.js"></script>
+    <script src="js/home/controller.js"></script>
+    <script src="js/login/controller.js"></script>
+    <script src="js/map/controller.js"></script>
+    <script src="js/home/router.js"></script>
+    <script src="js/login/router.js"></script>
+    <script src="js/map/router.js"></script>
 </head>
-<body ng-app="starter">
+<body ng-app="fyviapp">
     <ion-nav-view></ion-nav-view>
 </body>
 </html>
