--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,12 @@
     <script src="js/home/router.js"></script>
     <script src="js/login/router.js"></script>
     <script src="js/map/router.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/markerwithlabel.js"></script>
+    <script src="js/translation.js"></script>
+    <script src="js/angular-translate.min.js"></script>
 </head>
 <body ng-app="fyviapp">
     <ion-nav-view></ion-nav-view>
