--- a/www/index.html
+++ b/www/index.html
@@ -11,27 +11,24 @@
     -->
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false"></script>
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!--<script src="cordova.js"></script>-->
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <!--<script src="js/controllers.js"></script>-->
     <script src="js/common/services.js"></script>
     <script src="js/common/directives.js"></script>
-    <script src="js/common/markerwithlabel.js"></script>
+    <script src="js/common/app_en_properties.js"></script>
+    
     <script src="js/home/controller.js"></script>
     <script src="js/login/controller.js"></script>
     <script src="js/map/controller.js"></script>
+
     <script src="js/home/router.js"></script>
     <script src="js/login/router.js"></script>
     <script src="js/map/router.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/markerwithlabel.js"></script>
-    <script src="js/translation.js"></script>
-    <script src="js/angular-translate.min.js"></script>
+    <script src="js/lib/markerwithlabel.js"></script>
+    <script src="js/lib/angular-translate.min.js"></script>
 </head>
 <body ng-app="fyviapp">
     <ion-nav-view></ion-nav-view>
