--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,13 @@
     <script src="js/home/controller.js"></script>
     <script src="js/login/controller.js"></script>
     <script src="js/map/controller.js"></script>
+    <script src="js/friends/controller.js"></script>
 
     <script src="js/home/router.js"></script>
     <script src="js/login/router.js"></script>
     <script src="js/map/router.js"></script>
+    <script src="js/friends/router.js"></script>
+
     <script src="js/lib/markerwithlabel.js"></script>
     <script src="js/lib/angular-translate.min.js"></script>
 </head>
