--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false"></script>
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="js/lib/cordova/ng-cordova.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="js/lib/cordova/cordova.js"></script>
 
     <!-- your app's js -->
