--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,43 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>tittle</title>
-    <script>
-     window.location='./main.html';
-    </script>
-    <body>
-    </body>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
+    <!-- ionic/angularjs js -->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false"></script>
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="cordova.js"></script>
+
+    <!-- your app's js -->
+    <script src="js/app.js"></script>
+    <script src="js/common/services.js"></script>
+    <script src="js/common/directives.js"></script>
+    <script src="js/common/app_en_properties.js"></script>
+    <script src="js/common/IConstants.js"></script>
+    
+    <script src="js/home/controller.js"></script>
+    <script src="js/login/controller.js"></script>
+    <script src="js/map/controller.js"></script>
+    <script src="js/friends/controller.js"></script>
+
+    <script src="js/home/router.js"></script>
+    <script src="js/login/router.js"></script>
+    <script src="js/map/router.js"></script>
+    <script src="js/friends/router.js"></script>
+
+    <script src="js/lib/markerwithlabel.js"></script>
+    <script src="js/lib/angular-translate.min.js"></script>
+
 </head>
+<body ng-app="fyviapp">
+    <ion-nav-view></ion-nav-view>
+</body>
 </html>
