--- a/www/main.html
+++ b/www/main.html
@@ -35,6 +35,7 @@
 
     <script src="js/lib/markerwithlabel.js"></script>
     <script src="js/lib/angular-translate.min.js"></script>
+    <script src="js/lib/angular-messages.js"></script>
 
 </head>
 <body ng-app="fyviapp">
