--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,3 @@
-﻿<!doctype html>
-<html>
-<head>
-    <title>tittle</title>
-    <script>
-     window.location='./main.html';
-    </script>
-    <body>
-    </body>
-</head>
-</html>
+﻿<script type="text/javascript">
+	window.location='./main.html';
+</script>
