--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/common/directives.js"></script>
     <script src="js/common/app_en_properties.js"></script>
     <script src="js/common/IConstants.js"></script>
+    <script src="js/common/moment.js"></script>
     
     <script src="js/home/controller.js"></script>
     <script src="js/login/controller.js"></script>
